Bug 110682 - [CI][SHARDS] random tests - skip - Can't become DRM master, please check if no other DRM client is running.
Summary: [CI][SHARDS] random tests - skip - Can't become DRM master, please check if n...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-15 07:13 UTC by Martin Peres
Modified: 2019-11-12 15:54 UTC (History)
1 user (show)

See Also:
i915 platform: ICL
i915 features: CI Infra


Attachments

Description Martin Peres 2019-05-15 07:13:25 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@prime_busy@before-vebox.html

Test requirement not met in function igt_device_set_master, file ../lib/igt_device.c:54:
Test requirement: __igt_device_set_master(fd) == 0
Can't become DRM master, please check if no other DRM client is running.
Subtest before-vebox: SKIP
Comment 1 Martin Peres 2019-05-15 07:14:07 UTC
Filing as an infra bug, since this happened only on a couple of machines. Please check if it is not a lingering test that caused these skips!
Comment 2 CI Bug Log 2019-05-15 07:14:27 UTC
The CI Bug Log issue associated to this bug has been updated.

### New filters associated

* shard-iclb[58]: random tests - skip - Can't become DRM master, please check if no other DRM client is running.
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@prime_busy@before-vebox.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_frontbuffer_tracking@psr-2p-scndscrn-cur-indfb-draw-mmap-wc.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_frontbuffer_tracking@fbc-1p-primscrn-pri-indfb-draw-mmap-wc.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@prime_vgem@basic-write.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_draw_crc@draw-method-xrgb8888-mmap-cpu-xtiled.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_cursor_crc@pipe-a-cursor-128x128-offscreen.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_draw_crc@draw-method-rgb565-mmap-gtt-xtiled.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_vblank@pipe-a-query-forked-hang.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@perf_pmu@multi-client-vcs0.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_addfb_basic@basic-y-tiled.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@gem_exec_schedule@wide-bsd.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_frontbuffer_tracking@fbcpsr-1p-rte.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@perf_pmu@render-node-busy-vecs0.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@gem_exec_schedule@preempt-contexts-vebox.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_cursor_crc@pipe-b-cursor-128x128-random.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_frontbuffer_tracking@fbc-2p-scndscrn-spr-indfb-draw-render.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_atomic_transition@1x-modeset-transitions-nonblocking-fencing.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_frontbuffer_tracking@fbc-2p-primscrn-pri-shrfb-draw-blt.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_plane_multiple@atomic-pipe-b-tiling-x.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@gem_exec_schedule@preempt-queue-vebox.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@perf_pmu@other-init-3.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_atomic_transition@4x-modeset-transitions-nonblocking-fencing.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_ccs@pipe-b-crc-primary-rotation-180.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_frontbuffer_tracking@psr-1p-primscrn-pri-shrfb-draw-mmap-cpu.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_frontbuffer_tracking@fbc-2p-scndscrn-indfb-pgflip-blt.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_universal_plane@cursor-fb-leak-pipe-b.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@gem_exec_schedule@reorder-wide-bsd.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_busy@extended-modeset-hang-oldfb-with-reset-render-f.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@perf_pmu@idle-no-semaphores-vcs0.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@gem_exec_parallel@contexts.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_frontbuffer_tracking@fbcpsr-2p-primscrn-spr-indfb-draw-mmap-wc.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_frontbuffer_tracking@psr-2p-primscrn-pri-shrfb-draw-pwrite.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_flip@flip-vs-panning-vs-hang.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@perf_pmu@semaphore-wait-rcs0.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_frontbuffer_tracking@fbc-shrfb-scaledprimary.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_cursor_crc@pipe-c-cursor-128x42-sliding.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_cursor_crc@pipe-c-cursor-64x21-random.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_draw_crc@draw-method-xrgb2101010-mmap-gtt-xtiled.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_flip@2x-dpms-vs-vblank-race.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_chamelium@hdmi-hpd-storm-disable.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_flip@flip-vs-absolute-wf_vblank.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_lease@lease_invalid_plane.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_psr@primary_mmap_cpu.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_frontbuffer_tracking@psr-rgb565-draw-mmap-cpu.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_plane@plane-position-hole-pipe-c-planes.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_flip@2x-flip-vs-panning-interruptible.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_frontbuffer_tracking@fbcpsr-rgb565-draw-render.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_pipe_crc_basic@hang-read-crc-pipe-c.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_rotation_crc@primary-rotation-90.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@i915_pm_lpsp@edp-native.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@gem_exec_reloc@basic-gtt-cpu-noreloc.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@gem_exec_schedule@preempt-blt.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_atomic_transition@1x-modeset-transitions.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_frontbuffer_tracking@fbcpsr-1p-offscren-pri-indfb-draw-render.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@i915_pm_rpm@gem-pread.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@gem_busy@extended-parallel-bsd.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_psr@psr2_sprite_blt.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_psr@psr2_cursor_mmap_gtt.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_atomic@plane_invalid_params_fence.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_frontbuffer_tracking@psr-1p-primscrn-pri-indfb-draw-mmap-cpu.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_cursor_edge_walk@pipe-b-64x64-left-edge.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6081/shard-iclb8/igt@kms_busy@extended-pageflip-hang-newfb-render-b.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_13017/shard-iclb5/igt@prime_vgem@basic-write.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_13017/shard-iclb5/igt@kms_draw_crc@draw-method-xrgb8888-mmap-cpu-xtiled.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_13017/shard-iclb5/igt@kms_cursor_crc@pipe-a-cursor-128x128-offscreen.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_13017/shard-iclb5/igt@kms_draw_crc@draw-method-rgb565-mmap-gtt-xtiled.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_13017/shard-iclb5/igt@kms_vblank@pipe-a-query-forked-hang.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_13017/shard-iclb5/igt@perf_pmu@multi-client-vcs0.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_13017/shard-iclb5/igt@kms_addfb_basic@basic-y-tiled.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6082/shard-iclb5/igt@gem_exec_schedule@semaphore-power.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6082/shard-iclb5/igt@kms_color@pipe-b-legacy-gamma.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6082/shard-iclb5/igt@kms_chamelium@vga-hpd-without-ddc.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6082/shard-iclb5/igt@kms_frontbuffer_tracking@psr-2p-primscrn-shrfb-plflip-blt.html
Comment 3 Chris Wilson 2019-05-15 08:32:46 UTC
Oh SKIP. We don't dump the debug log for SKIPs, and yet we report what other clients are running as DEBUG iirc. Hmm, I thought we had already noticed that and promoted it to a WARN -- so maybe we don't dump the clients debugfs at all?
Comment 5 Tomi Sarvela 2019-05-15 10:56:01 UTC
CI_DRM_6084/shard-iclb8/run14.log:
[01/85] (960s left) perf_pmu (frequency)
Subtest frequency: SKIP

probably due to previous failure:

CI_DRM_6084/shard-iclb8/run0.log:
[70/85] (557s left) gem_mmap_gtt (forked-big-copy)
Build timed out (after 20 minutes). Marking the build as aborted.

This job has been aborted, so there should be reboot inbetween, but for some reason, there is not and this should be investigated CI-side.

gem_mmap_gtt failures (timeouts and incompletes) have been caused by the recent upgrade to the BKC SES4 BIOS / PD FW, and this is kernel/bios/hw incompatibility issue.
Comment 6 CI Bug Log 2019-05-15 12:29:07 UTC
The CI Bug Log issue associated to this bug has been updated.

### New filters associated

* ICL: igt@kms_prop_blob@invalid-set-prop-any - fail - Failed assertion: drmIoctl(fd, DRM_IOCTL_MODE_OBJ_SETPROPERTY, &set_prop) == -1 && errno == EINVAL, Last errno: 13, Permission denied
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_13017/shard-iclb5/igt@kms_prop_blob@invalid-set-prop-any.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_4290/shard-iclb2/igt@kms_prop_blob@invalid-set-prop-any.html
Comment 7 CI Bug Log 2019-11-12 15:53:33 UTC
The CI Bug Log issue associated to this bug has been archived.

New failures matching the above filters will not be associated to this bug anymore.
Comment 8 Petri Latvala 2019-11-12 15:53:59 UTC
Closing, not seen since May.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.